[package]
name = "rust-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
sqlx = { version = "0.3.5", features = ["sqlite", "chrono"] }
askama = { version = "0.10.5", features = ["with-tide"] }
serde = "1.0"
serde_urlencoded = "0.7.0"
askama_tide = "0.13.0"
async-sqlx-session = { version = "0.2.1", features = ["sqlite"] }
