[package]
name = "rust_test"
version = "0.1.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.9.0", features = ["attributes"] }
sqlx = { version = "0.5.5", features = ["sqlite", "chrono"] }
askama = { version = "0.10.5", features = ["with-tide"] }
serde = "1.0.127"
serde_urlencoded = "0.7.0"
askama_tide = "0.13.0"
async-sqlx-session = { version = "0.4.0", features = ["sqlite"] }